# src/routes/lightNovelRouter.ts
@@ -1,5 +1,5 @@
 import { Router } from "express";
-import { getLightNovels, getLightNovelById, deleteLightNovelById, createLightNovel, updateLightNovelById, uploadCoverById } from "../controllers/lightNovelController.js";
+import { getLightNovels, getLightNovelById, deleteLightNovelById, createLightNovel, updateLightNovelById, uploadCoverById, getLightNovelsByGenre } from "../controllers/lightNovelController.js";
 import { authMiddleware } from "../middlewares/authMiddleware.js";
 import { uploadCoverMiddleware } from "../middlewares/uploadCoverMiddleware.js";
 
@@ -10,6 +10,7 @@ lightNovelRouter.post("/", authMiddleware, createLightNovel);
 
 // READ
 lightNovelRouter.get("/", getLightNovels);
+lightNovelRouter.get("/genre/:genre", getLightNovelsByGenre);
 lightNovelRouter.get("/:id", getLightNovelById);
 
 // UPDATE
